<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">YaV1</string>
    <string name="ok">Ok</string>
    <string name="error">Error</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Warning</string>
    <string name="select">Select</string>
    <string name="push">Push</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset">Reset</string>
    <string name="unit_mph">MPH</string>
    <string name="unit_kph">KPH</string>
    <string name="save">Save</string>
    <string name="default_symbol">Default</string>
    <string name="override_file">Replace the file?</string>
    <string name="new_file">New file</string>
    <string name="no_storage_available">It appears that there is not available storage on the device, insert SD card</string>
    <string name="success">Success</string>
    <string name="accept">Accept</string>
    <string name="add">Add</string>
    <string name="select_create_file">Select a file or create a new file</string>
    <string name="select_file">Select a file</string>
    <string name="wait">Wait...</string>
    <string name="cancel_connect">Cancelling bluetooth search... wait</string>
    <string name="wired_savvy">Wired Savvy</string>
    <string name="no_wired_savvy">No wired Savvy found or V1C not connected</string>
    <string name="gen_export">Export</string>
    <string name="gen_import">Import</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="preset">Preset</string>
    <string name="presets">Preset</string>
    <string name="preset_title">Apply preset</string>
    <string name="preset_message">The preset will override the current settings, you should make a backup before. Continue?</string>
    <string name="preset_done">The preset has been loaded</string>
    <string name="preset_error">The preset could not be loaded</string>
    <string name="lockout">Lockout</string>
    <string name="unlock">Unlock</string>
    <string name="unlearn">Unlearn</string>
    <string name="white">White list</string>
    <string name="white_short">White</string>
    <string name="collect">Collect</string>
    <string name="pref_advanced">Advanced</string>
    <string name="pref_misc">Misc</string>
    <string name="pref_gen_startup">Start-up parameters</string>
    <string name="pref_gen_auto_start">Connect automatically</string>
    <string name="pref_gen_auto_start_summary">Search for and connect to a known V1 at start-up</string>
    <string name="pref_gen_auto_dark">Go dark</string>
    <string name="pref_gen_auto_dark_summary">Turn off the V1 display when connected</string>
    <string name="pref_gen_smart_dark">Smart dark</string>
    <string name="pref_gen_smart_dark_summary">Turn on V1 display when receiving non-muted alerts</string>
    <string name="pref_gen_default_view">Default view</string>
    <string name="pref_gen_alerts">Sound preferences</string>
    <string name="pref_gen_phone_alert">Use phone for alerts</string>
    <string name="pref_gen_phone_alert_summary">Alerts will sound on phone in addition to the V1 beeps</string>
    <string name="pref_gen_volume_signal">Volume vs Signal</string>
    <string name="pref_gen_volume_signal_summary">Volume for the alert will be adjusted according to the alert strength</string>
    <string name="pref_gen_sound_multiple">Play all alert sounds</string>
    <string name="pref_gen_sound_multiple_summary">Play all the alert sounds together, otherwise play only the strongest alert sound</string>
    <string name="pref_gen_sound_all_bogey">Bogey on new band</string>
    <string name="pref_gen_sound_all_bogey_summary">Bogey will be played on a new band alert</string>
    <string name="pref_gen_sound_bogey">Bogey sound</string>
    <string name="pref_gen_sound_laser">Laser sound</string>
    <string name="pref_gen_sound_ka">Ka sound</string>
    <string name="pref_gen_sound_k">K sound</string>
    <string name="pref_gen_sound_x">X sound</string>
    <string name="pref_gen_sound_ku">Ku sound</string>
    <string name="pref_gen_sound_fast_ramp_summary">Ramp effect faster, use with caution, if application crashes or sound becomes inaudible unset the option</string>
    <string name="pref_gen_sound_fast_ramp">Faster ramp effect</string>
    <string name="pref_gen_sound_volume">Sound volume</string>
    <string name="pref_gen_sound_volume_summary">Volume is managed by phone volume buttons</string>
    <string name="pref_gen_sound_no_music">No alert sound when playing music</string>
    <string name="pref_gen_sound_no_music_summary">Alert sound will not play when device is streaming music</string>
    <string name="pref_gen_dbg_log">Debug log</string>
    <string name="pref_gen_dbg_log_summary">Turn on only at the request of the developer</string>
    <string name="pref_gen_early_laser">Early laser sound</string>
    <string name="pref_gen_early_laser_summary">Sounds laser alerts without processing additional packets, which MAY slightly improve reaction time against LIDAR></string>
    <string name="pref_gen_connect">Connect/disconnect sound</string>
    <string name="pref_gen_connect_summary">Sound when the alert service is running and active</string>
    <string name="pref_gen_gps">GPS settings</string>
    <string name="pref_gen_gps_use_gps">GPS</string>
    <string name="pref_gen_gps_speed_unit">Speed unit</string>
    <string name="pref_gen_gps_savvy">SAVVY emulation</string>
    <string name="pref_gen_gps_savvy_summary">Mute V1 if speed is below the specified limit</string>
    <string name="pref_gen_gps_exclude_ka_savvy">Exclude Ka muting under savvy</string>
    <string name="pref_gen_gps_exclude_ka_savvy_summary">Keep Ka alerts audible under the Savvy speed</string>
    <string name="pref_gen_gps_exclude_laser_savvy">Exclude laser muting under savvy</string>
    <string name="pref_gen_gps_exclude_laser_savvy_summary">Keep laser alerts audible under the Savvy speed</string>
    <string name="pref_gen_gps_savvy_speed">SAVVY speed limit</string>
    <string name="pref_gen_gps_adv_gps">GPS</string>
    <string name="pref_gen_gps_timeout">GPS timeout</string>
    <string name="pref_gen_gps_reset">Enable GPS reset</string>
    <string name="pref_gen_gps_reset_summary">Enable reset GPS by clicking on the view</string>
    <string name="pref_gen_v1_timeout">V1 timeout</string>
    <string name="pref_gen_bt_workaround">Bluetooth workaround</string>
    <string name="pref_gen_bt_workaround_summary">Use this option ONLY if you have trouble connecting with V1</string>
    <string name="pref_gen_data_collect">Data collector</string>
    <string name="pref_gen_data_collect_summary">Check this option if you collect data for AI model, logging must be available</string>
    <string name="pref_gen_display">Display preferences</string>
    <string name="pref_gen_display_order">V1 View priority</string>
    <string name="pref_gen_display_sort_alert_view_summary">Use V1 view priority in the alert view</string>
    <string name="pref_gen_display_sort_alert_view">Sort alert view</string>
    <string name="pref_gen_display_overlay_summary">Shows alert summary on top of all applications, when application runs in background</string>
    <string name="pref_gen_display_overlay">Overlay</string>
    <string name="pref_gen_display_overlay_inbox_summary">Overlay will be visible only if some alerts are in the box</string>
    <string name="pref_gen_display_overlay_inbox">Only for inbox</string>
    <string name="pref_gen_display_overlay_vertical">Overlay vertical position</string>
    <string name="pref_gen_display_overlay_horizontal">Overlay horizontal position</string>
    <string name="pref_gen_display_hide_overlay_speed_summary">Disable overlay when emulating savvy, and speed is lower than the limit</string>
    <string name="pref_gen_display_hide_overlay_speed">No overlay in savvy</string>
    <string name="pref_gen_display_overlay_sticky">Sticky overlay</string>
    <string name="pref_gen_display_overlay_sticky_summary">Overlay will be display even if no alerts, when application is in background</string>
    <string name="pref_gen_display_overlay_mute">Overlay mute</string>
    <string name="pref_gen_display_overlay_mute_summary">Allow permanent mute clicking on the alert list, click again to mute off</string>
    <string name="pref_gen_display_overlay_size">Overlay size</string>
    <string name="pref_gen_display_overlay_click_summary">Click overlay will resume YaV1 last view, remove check mark if you want click with no effect</string>
    <string name="pref_gen_display_overlay_click">Click overlay</string>
    <string name="pref_gen_auto_stop">Auto stop timeout</string>
    <string name="pref_gen_display_alert_theme">Alert theme</string>
    <string name="pref_gen_display_go_dark">Enable dark mode</string>
    <string name="pref_gen_display_go_dark_summary">Long pressing back key will make device screen and V1 go black and mute, long pressing back key again or dark space will restore</string>
    <string name="pref_gen_display_hide_speaker">Hide speaker button</string>
    <string name="pref_gen_display_hide_speaker_summary">Do not show the mute button on the alert view</string>
    <string name="pref_gen_display_overlay_long_click_summary">Manual lockout pop up on long click on the arrow</string>
    <string name="pref_gen_display_overlay_long_click">Enable manual lockout</string>
    <string name="pref_gen_display_led">Alert with Phone LED</string>
    <string name="pref_gen_display_vibrator">Use vibrator</string>
    <string name="pref_gen_display_battery_voltage">Battery voltage</string>
    <string name="pref_gen_display_battery_voltage_summary">Show the battery voltage</string>
    <string name="pref_logging">Alert logging</string>
    <string name="pref_logging_format">Log format</string>
    <string name="pref_logging_signal">Log min. signal strength</string>
    <string name="pref_logging_laser">Log laser alerts</string>
    <string name="pref_logging_laser_summary">Log laser alerts</string>
    <string name="pref_logging_x">Log X band alerts</string>
    <string name="pref_logging_x_summary">Log X alerts</string>
    <string name="pref_logging_k">Log K band alerts</string>
    <string name="pref_logging_k_summary">Log K alerts</string>
    <string name="pref_logging_ka">Log Ka band alerts</string>
    <string name="pref_logging_ka_summary">Log Ka alerts</string>
    <string name="pref_logging_ku">Log Ku band alerts</string>
    <string name="pref_logging_ku_summary">Log Ku alerts</string>
    <string name="pref_logging_exclude_lockout_summary">Exclude lockout alerts</string>
    <string name="pref_logging_exclude_lockout">Exclude lockout</string>
    <string name="pref_logging_exclude_otb_summary">Do not log alert Out Of Box</string>
    <string name="pref_logging_exclude_otb">Exclude Out of Box</string>
    <string name="pref_logging_purge">Delete logs older than</string>
    <string name="pref_logging_alert_color">Alert Colors</string>
    <string name="pref_logging_laser_alert_color">Laser alert color</string>
    <string name="pref_logging_ka_alert_color">Ka alert color</string>
    <string name="pref_logging_k_alert_color">K alert color</string>
    <string name="pref_logging_x_alert_color">X alert color</string>
    <string name="pref_logging_ku_alert_color">Ku alert color</string>
    <string name="pref_logging_enable_lockout">Allow lockout actions</string>
    <string name="pref_logging_enable_lockout_summary">Allow lockout / unlock from logged alert</string>
    <string name="gmap_select_all">Select All</string>
    <string name="gmap_select_laser">Select Laser</string>
    <string name="gmap_select_ka">Select Ka</string>
    <string name="gmap_select_k">Select K</string>
    <string name="gmap_select_x">Select X</string>
    <string name="gmap_select_ku">Select Ku</string>
</resources>