<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.franckyl.yav1.CustomSwitch
        android:defaultValue="false"
        android:key="log"
        android:title="@string/pref_logging"/>
    <ListPreference
        android:defaultValue="0"
        android:key="log_format"
        android:entries="@array/log_format"
        android:entryValues="@array/log_format_values"
        android:summary="%s"
        android:title="@string/pref_logging_format" >
    </ListPreference>
    <ListPreference
            android:defaultValue="1"
            android:key="log_min_signal"
            android:entries="@array/min_signal"
            android:dependency="log"
            android:entryValues="@array/min_signal_values"
            android:summary="%s"
            android:title="@string/pref_logging_signal">
    </ListPreference>
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="log_laser"
        android:dependency="log"
        android:summary="@string/pref_logging_laser_summary"
        android:title="@string/pref_logging_laser">
    </CheckBoxPreference>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="log_x"
        android:dependency="log"
        android:summary="@string/pref_logging_x_summary"
        android:title="@string/pref_logging_x">
    </CheckBoxPreference>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="log_k"
        android:dependency="log"
        android:summary="@string/pref_logging_k_summary"
        android:title="@string/pref_logging_k">
    </CheckBoxPreference>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="log_ka"
        android:dependency="log"
        android:summary="@string/pref_logging_ka_summary"
        android:title="@string/pref_logging_ka">
    </CheckBoxPreference>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="log_ku"
        android:dependency="log"
        android:summary="@string/pref_logging_ku_summary"
        android:title="@string/pref_logging_ku">
    </CheckBoxPreference>
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="exclude_lockout"
        android:dependency="log"
        android:summary="@string/pref_logging_exclude_lockout_summary"
        android:title="@string/pref_logging_exclude_lockout">
    </CheckBoxPreference>
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="exclude_outbox"
        android:dependency="log"
        android:summary="@string/pref_logging_exclude_otb_summary"
        android:title="@string/pref_logging_exclude_otb">
    </CheckBoxPreference>
    <ListPreference
        android:defaultValue="0"
        android:key="log_purge"
        android:entries="@array/log_purge"
        android:dependency="log"
        android:entryValues="@array/log_purge_values"
        android:summary="%s"
        android:title="@string/pref_logging_purge">
    </ListPreference>
    <PreferenceCategory
        android:title="@string/pref_logging_alert_color" >
        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="gmap_laser_color"
            android:defaultValue="0xffff0000"
            android:title="@string/pref_logging_laser_alert_color"/>
        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="gmap_ka_color"
            android:defaultValue="0xffff0590"
            android:title="@string/pref_logging_ka_alert_color"/>
        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="gmap_k_color"
            android:defaultValue="0xffffacda"
            android:title="@string/pref_logging_k_alert_color"/>
        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="gmap_x_color"
            android:defaultValue="0xffffff00"
            android:title="@string/pref_logging_x_alert_color"/>
        <yuku.ambilwarna.widget.AmbilWarnaPreference
            android:key="gmap_ku_color"
            android:defaultValue="0xffffb90f"
            android:title="@string/pref_logging_ku_alert_color"/>
    </PreferenceCategory>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="logging_allow_lockout"
        android:dependency="log"
        android:summary="@string/pref_logging_enable_lockout_summary"
        android:title="@string/pref_logging_enable_lockout">
    </CheckBoxPreference>
</PreferenceScreen>
