<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
            android:title="@string/pref_gen_startup">
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="auto_start"
                android:title="@string/pref_gen_auto_start"
                android:summary="@string/pref_gen_auto_start_summary">
        </CheckBoxPreference>
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="auto_dark"
                android:title="@string/pref_gen_auto_dark"
                android:summary="@string/pref_gen_auto_dark_summary">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="smart_dark"
            android:dependency="auto_dark"
            android:title="@string/pref_gen_smart_dark"
            android:summary="@string/pref_gen_smart_dark_summary">
        </CheckBoxPreference>
        <ListPreference
                android:defaultValue="1"
                android:key="default_view"
                android:entries="@array/default_view"
                android:entryValues="@array/default_view_values"
                android:summary="%s"
                android:title="@string/pref_gen_default_view">
        </ListPreference>
        <ListPreference
            android:defaultValue="0"
            android:key="auto_stop"
            android:entries="@array/auto_stop"
            android:entryValues="@array/auto_stop_values"
            android:summary="%s"
            android:title="@string/pref_gen_auto_stop">
        </ListPreference>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/pref_gen_gps" >
        <com.franckyl.yav1.CustomSwitch
                android:defaultValue="false"
                android:key="use_gps"
                android:title="@string/pref_gen_gps_use_gps"/>
        <ListPreference
                android:defaultValue="0"
                android:key="speed_unit"
                android:entries="@array/unit"
                android:dependency="use_gps"
                android:entryValues="@array/unit_values"
                android:summary="%s"
                android:title="@string/pref_gen_gps_speed_unit">
        </ListPreference>
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="mute_v1_under_speed"
                android:dependency="use_gps"
                android:summary="@string/pref_gen_gps_savvy_summary"
                android:title="@string/pref_gen_gps_savvy" >
        </CheckBoxPreference>
        <ListPreference
                android:defaultValue="25"
                android:key="n_speed_max"
                android:entries="@array/speed_max"
                android:dependency="mute_v1_under_speed"
                android:entryValues="@array/speed_max_values"
                android:summary="%s"
                android:title="@string/pref_gen_gps_savvy_speed">
        </ListPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="mute_v1_under_speed"
            android:key="exclude_ka_savvy"
            android:summary="@string/pref_gen_gps_exclude_ka_savvy_summary"
            android:title="@string/pref_gen_gps_exclude_ka_savvy" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="mute_v1_under_speed"
            android:key="exclude_laser_savvy"
            android:summary="@string/pref_gen_gps_exclude_laser_savvy_summary"
            android:title="@string/pref_gen_gps_exclude_laser_savvy" >
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceScreen
            android:title="@string/pref_advanced"
            android:persistent="false">
        <PreferenceCategory
                android:title="@string/pref_gen_gps_adv_gps">
            <ListPreference
                    android:defaultValue="5000"
                    android:key="gpstimeout"
                    android:dependency="use_gps"
                    android:entries="@array/gps_timeout"
                    android:entryValues="@array/gps_timeout_values"
                    android:summary="%s"
                    android:title="@string/pref_gen_gps_timeout">
            </ListPreference>
            <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="reset_gps"
                    android:dependency="use_gps"
                    android:summary="@string/pref_gen_gps_reset_summary"
                    android:title="@string/pref_gen_gps_reset">
            </CheckBoxPreference>
        </PreferenceCategory>
        <PreferenceCategory
                android:title="@string/pref_misc" >
            <ListPreference
                    android:defaultValue="6000"
                    android:key="v1_timeout"
                    android:entries="@array/v1_timeout"
                    android:entryValues="@array/v1_timeout_values"
                    android:summary="%s"
                    android:title="@string/pref_gen_v1_timeout">
            </ListPreference>
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="bt_workaround"
                android:summary="@string/pref_gen_bt_workaround_summary"
                android:title="@string/pref_gen_bt_workaround">
            </CheckBoxPreference>
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="dbg_log"
                android:summary="@string/pref_gen_dbg_log_summary"
                android:title="@string/pref_gen_dbg_log">
            </CheckBoxPreference>
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="data_collect"
                android:summary="@string/pref_gen_data_collect_summary"
                android:title="@string/pref_gen_data_collect">
            </CheckBoxPreference>
        </PreferenceCategory>
    </PreferenceScreen>
</PreferenceScreen>
