<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/pref_gen_display" >
        <ListPreference
            android:defaultValue="1"
            android:key="alert_sort"
            android:entries="@array/sort_alert"
            android:entryValues="@array/sort_alert_value"
            android:summary="%s"
            android:title="@string/pref_gen_display_order">
        </ListPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="sort_alert_view"
            android:summary="@string/pref_gen_display_sort_alert_view_summary"
            android:title="@string/pref_gen_display_sort_alert_view">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="hide_speaker_button"
            android:summary="@string/pref_gen_display_hide_speaker_summary"
            android:title="@string/pref_gen_display_hide_speaker">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="battery_voltage"
            android:summary="@string/pref_gen_display_battery_voltage_summary"
            android:title="@string/pref_gen_display_battery_voltage">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="overlay"
            android:summary="@string/pref_gen_display_overlay_summary"
            android:title="@string/pref_gen_display_overlay">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="overlay_inbox"
            android:dependency="overlay"
            android:summary="@string/pref_gen_display_overlay_inbox_summary"
            android:title="@string/pref_gen_display_overlay_inbox">
        </CheckBoxPreference>
        <ListPreference
            android:defaultValue="1"
            android:dependency="overlay"
            android:key="overlay_size"
            android:entries="@array/overlay_size"
            android:entryValues="@array/overlay_size_value"
            android:summary="%s"
            android:title="@string/pref_gen_display_overlay_size">
        </ListPreference>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="overlay_click"
            android:dependency="overlay"
            android:summary="@string/pref_gen_display_overlay_click_summary"
            android:title="@string/pref_gen_display_overlay_click">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="overlay_long_click"
            android:dependency="overlay"
            android:summary="@string/pref_gen_display_overlay_long_click_summary"
            android:title="@string/pref_gen_display_overlay_long_click">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="overlay_hide_speed"
            android:dependency="overlay"
            android:summary="@string/pref_gen_display_hide_overlay_speed_summary"
            android:title="@string/pref_gen_display_hide_overlay_speed">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="overlay_sticky"
            android:dependency="overlay"
            android:summary="@string/pref_gen_display_overlay_sticky_summary"
            android:title="@string/pref_gen_display_overlay_sticky">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="overlay_mute"
            android:dependency="overlay_sticky"
            android:summary="@string/pref_gen_display_overlay_mute_summary"
            android:title="@string/pref_gen_display_overlay_mute">
        </CheckBoxPreference>
        <ListPreference
            android:defaultValue="1"
            android:dependency="overlay"
            android:key="overlay_vertical"
            android:entries="@array/overlay_vertical_position"
            android:entryValues="@array/overlay_vertical_position_value"
            android:summary="%s"
            android:title="@string/pref_gen_display_overlay_vertical">
        </ListPreference>
        <ListPreference
            android:defaultValue="1"
            android:dependency="overlay"
            android:key="overlay_horizontal"
            android:entries="@array/overlay_horizontal_position"
            android:entryValues="@array/overlay_horizontal_position_value"
            android:summary="%s"
            android:title="@string/pref_gen_display_overlay_horizontal">
        </ListPreference>
        <ListPreference
            android:defaultValue="0"
            android:key="led_enabled"
            android:entries="@array/led"
            android:entryValues="@array/led_values"
            android:summary="%s"
            android:title="@string/pref_gen_display_led">
        </ListPreference>
        <ListPreference
            android:defaultValue="0"
            android:key="vibrator_enabled"
            android:entries="@array/vibrator"
            android:entryValues="@array/vibrator_values"
            android:summary="%s"
            android:title="@string/pref_gen_display_vibrator">
        </ListPreference>
        <ListPreference
            android:defaultValue=""
            android:key="alert_theme"
            android:entries="@array/alert_theme"
            android:entryValues="@array/alert_theme_value"
            android:summary="%s"
            android:title="@string/pref_gen_display_alert_theme">
        </ListPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="go_dark"
            android:summary="@string/pref_gen_display_go_dark_summary"
            android:title="@string/pref_gen_display_go_dark">
        </CheckBoxPreference>
    </PreferenceCategory>
</PreferenceScreen>
