<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_gen_alerts">
        <com.franckyl.yav1.CustomSwitch
            android:defaultValue="false"
            android:persistent="true"
            android:key="phone_alert"
            android:title="@string/pref_gen_phone_alert"
            android:summary="@string/pref_gen_phone_alert_summary"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="no_sound_music"
            android:dependency="phone_alert"
            android:title="@string/pref_gen_sound_no_music"
            android:summary="@string/pref_gen_sound_no_music_summary">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="volume_signal"
            android:dependency="phone_alert"
            android:title="@string/pref_gen_volume_signal"
            android:summary="@string/pref_gen_volume_signal_summary">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="phone_alert"
            android:key="sound_multiple"
            android:title="@string/pref_gen_sound_multiple"
            android:summary="@string/pref_gen_sound_multiple_summary">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="phone_alert"
            android:key="fast_ramp"
            android:title="@string/pref_gen_sound_fast_ramp"
            android:summary="@string/pref_gen_sound_fast_ramp_summary">
        </CheckBoxPreference>

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="sound_multiple"
            android:key="bogey_multi"
            android:title="@string/pref_gen_sound_all_bogey"
            android:summary="@string/pref_gen_sound_all_bogey_summary">
        </CheckBoxPreference>

        <com.franckyl.yav1.YaV1SoundList
            android:defaultValue="1"
            android:dependency="phone_alert"
            android:key="sound_bogey"
            android:entries="@array/sound"
            android:entryValues="@array/sound_values"
            android:summary="%s"
            android:title="@string/pref_gen_sound_bogey"/>

        <com.franckyl.yav1.YaV1SoundList
            android:defaultValue="3"
            android:dependency="phone_alert"
            android:key="sound_laser"
            android:entries="@array/sound"
            android:entryValues="@array/sound_values"
            android:summary="%s"
            android:title="@string/pref_gen_sound_laser"/>

        <com.franckyl.yav1.YaV1SoundList
            android:defaultValue="3"
            android:dependency="phone_alert"
            android:key="sound_ka"
            android:entries="@array/sound"
            android:entryValues="@array/sound_values"
            android:summary="%s"
            android:title="@string/pref_gen_sound_ka"/>

        <com.franckyl.yav1.YaV1SoundList
            android:defaultValue="4"
            android:dependency="phone_alert"
            android:key="sound_k"
            android:entries="@array/sound"
            android:entryValues="@array/sound_values"
            android:summary="%s"
            android:title="@string/pref_gen_sound_k"/>

        <com.franckyl.yav1.YaV1SoundList
            android:defaultValue="5"
            android:key="sound_x"
            android:dependency="phone_alert"
            android:entries="@array/sound"
            android:entryValues="@array/sound_values"
            android:summary="%s"
            android:title="@string/pref_gen_sound_x"/>

        <com.franckyl.yav1.YaV1SoundList
            android:defaultValue="0"
            android:key="sound_ku"
            android:dependency="phone_alert"
            android:entries="@array/sound"
            android:entryValues="@array/sound_values"
            android:summary="%s"
            android:title="@string/pref_gen_sound_ku"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="phone_alert"
            android:key="early_laser"
            android:title="@string/pref_gen_early_laser"
            android:summary="@string/pref_gen_early_laser_summary">
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="volume_alert"
            android:dependency="phone_alert"
            android:title="@string/pref_gen_sound_volume"
            android:summary="@string/pref_gen_sound_volume_summary">
        </CheckBoxPreference>
        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:showDefault="true"
            android:key="active_sound"
            android:summary="@string/pref_gen_connect_summary"
            android:title="@string/pref_gen_connect"
            android:ringtoneType="notification">
        </RingtonePreference>
    </PreferenceCategory>
</PreferenceScreen>